# Kestrel

./: .gitignore  CLAUDE.md  PROJECT_DOCUMENTATION.md  PROJECT_JOURNAL.md  README.md  pyproject.toml  run.sh  toolcheck.sh
config/: default.yaml
docker/: Dockerfile  tool_manifest.yaml
kestrel/: __init__.py  banner.py
kestrel/assets/: __init__.py
kestrel/core/: __init__.py  config.py  docker_manager.py  executor.py  platform.py  session.py
kestrel/llm/: __init__.py  anthropic.py  anthropic_backend.py  backend.py  backend_factory.py  context_trimmer.py  hybrid_router.py  mlx_backend.py  ollama_backend.py  prompts.py
kestrel/parsers/: __init__.py  base.py  ffuf.py  gobuster.py  httpx.py  nikto.py  nmap.py  nuclei.py  sqlmap.py  subfinder.py  whatweb.py
kestrel/reports/: __init__.py
kestrel/tools/: __init__.py  base.py  ffuf.py  gobuster.py  httpx.py  nikto.py  nmap.py  nuclei.py  registry.py  sqlmap.py  subfinder.py  whatweb.py
tests/: conftest.py  run_docker_tool_tests.py  test_kali_integration.py  test_phase0_scaffold.py  test_phase1_1_registry.py  test_phase1_core.py  test_phase1_docker.py  test_phase1_executor.py  test_phase2_kali_native.py  test_phase2_platforms.py  test_phase3_tools.py  test_phase4_live_api.py  test_phase4_platforms.py
tests/test_llm/: test_phase2_llm.py
